--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+OPENAI_API_KEY=put your key here
+OPENWEATHER_KEY=891b7a6c39b43f37728e7c37940a886f
